2011-10-12 mmichaud <michael.michaud@free.fr>
    * Small improvement in LabelStyle (Label multipolygon on widest polygon)
    * Use new FeatureInstaller methods and exclude calls to MultiInputDialog
      in run method of plugins (see also feature request 3421958 & 3200485) :
      - LineNoderPlugIn
      - PolygonizerPlugIn
      - PrecisionReducerPlugIn

2011-10-08 mmichaud <michael.michaud@free.fr>
    * Clean and improve AutoAssignAttributePlugIn

2011-10-02 mmichaud <michael.michaud@free.fr>
    * Improved LabelStyle : adds a default value for vertical alignment
      (default is middle for areas and above for lines and points)
      and a horizontal position attribute distinct from horizontal alignment.
      See also Feature Request 3407229
      Now behaviour should be the following :
      Area
         Vertical alignment means above, below or middle of the bounding box
         Horizontal position means on the left, right or center of the bounding box
         Horizontal alignment can center, left-align or right-align the text.
             It is relative to the horizontal position.
      LineString
         Vertical alignment means above, below or on the line
         Horizontal position means endpoint of leftmost segment,
             endpoint of rightmost segment or longest segment
             leftmost/rightmost segments are end segments
         Horizontal alignment is left-aligned, centered or right-aligned on the
             first point, the last point or the longest segment
         Texts follow segment orientation except texts which are right-aligned
             on the left of the LineString or left-aligned on the right of the 
             LineString (these last texts are written horizontally)
      Points
         Vertical is above, below or on the point
         Horizontal position is on the left, right or middle of the point
         Horizontal alignment is ignored

2011-10-02 mmichaud <michael.michaud@free.fr>